<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="principal.sistemalux.FormConsumo">

    <LinearLayout
        android:layout_width="368dp"
        android:layout_height="495dp"
        android:orientation="horizontal"
        tools:layout_editor_absoluteX="8dp"
        tools:layout_editor_absoluteY="8dp">


        <RadioGroup
            android:id="@+id/seletorConsumo"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/dispositivoSelecionado"
                android:layout_width="300dp"
                android:layout_height="50dp"
                android:text="TextView"
                android:layout_gravity="center"
                tools:layout_editor_absoluteX="8dp"
                tools:layout_editor_absoluteY="-9dp" />

            <RadioButton
                android:id="@+id/botao2hrs"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/hrs2" />

            <RadioButton
                android:id="@+id/botao2a4hrs"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/hrs4" />

            <RadioButton
                android:id="@+id/botao4a6hrs"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/hrs6" />

            <RadioButton
                android:id="@+id/botao6a8hrs"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/hrs8" />

            <RadioButton
                android:id="@+id/botao8a10hrs"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/hrs10" />

            <RadioButton
                android:id="@+id/botao10a12hrs"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/hrs12" />

            <RadioButton
                android:id="@+id/botao12a14hrs"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/hrs14" />

            <RadioButton
                android:id="@+id/botao14a16hrs"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/hrs16" />

            <RadioButton
                android:id="@+id/botao16a18hrs"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/hrs18" />

            <RadioButton
                android:id="@+id/botao18a20hrs"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/hrs20" />

            <RadioButton
                android:id="@+id/botao20a22hrs"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/hrs22" />

            <RadioButton
                android:id="@+id/botao22a24hrs"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/hrs24" />

        </RadioGroup>
    </LinearLayout>

</android.support.constraint.ConstraintLayout>
